# bsd-tests

./: README.md  TODO
children_count/: CMakeLists.txt  solution.c  test.txt
childs_count/: Makefile
daemon/: CMakeLists.txt  solution.c
getopt_long/: CMakeLists.txt  solution.c
hash_table/: CMakeLists.txt  solution.c
pqlibtest/: CMakeLists.txt  main.c  mycomps.sql  pqtest.h
tcp_sort/: CMakeLists.txt  solution.c
utfcheck/: CMakeLists.txt  main.c  main_w.c
